--- a/space_invaders/style.css
+++ b/space_invaders/style.css
@@ -1,11 +1,11 @@
 #background {
-	background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/2247986/background.png);
+	background-image: url(assets/background.png);
 	height: 800px;
 	width: 1200px;
 }
 
 #fighter {
-	background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/2247986/fighter.png);
+	background-image: url(assets/fighter.png);
 	height: 50px;
 	width: 50px;
 	position: absolute;
@@ -16,7 +16,7 @@
 }
 
 .aliens {
-	background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/2247986/aliens.png);
+	background-image: url(assets/aliens.png);
 	height: 50px;
 	width: 50px;
 	position: absolute;
